--- a/views/categoria.ejs
+++ b/views/categoria.ejs
@@ -3,7 +3,8 @@
 <div class="container">
     <img src="/img/cinema.png" alt="Pop Corn and movie" class="img-fluid" style="height: 80px; float: left; margin-right: 20px; margin-top: 20px; margin-bottom: 20px;">
     <h1 class="text-center"><%= title %></h1>
-    <h2 class="text-center"><%= message %></h2>
+    <h3 class="text-center"><%= message %></h3>
+    <% if (cat === 'serie' || cat === 'película') { %>
     <table class="table table-hover">
         <tr>
             <th>Id</th>
@@ -38,6 +39,7 @@
             </tr>
         <% } %>
     </table>
+    <% } %>
 </div>
 
 <%- include('./includes/footer') %>
